--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key or click any where to Start</h1>
+  <h1 id="level-title">Press any key or press "start game" to Start</h1>
+  <button type="button" name="button" class="start">Start Game</button>
   <div class="container">
     <div lass="row">
 
